# HEIF-Utility-Native-DLL

./: .gitignore  CMakeLists.txt  Copyright Notice.txt  README.md
Bins/: IMG_4229.HEIC
EnglishIntro/: README.md
Examples/: 10.HEIC  12.HEIC  2.HEIC  3.HEIC  4.HEIC  5.HEIC
MSVC/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HEIF.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildinfo.hpp  cmake_install.cmake
MSVC/Srcs/: cmake_install.cmake
MSVC/Srcs/HUD/: HUD.vcxproj  HUD.vcxproj.filters  cmake_install.cmake
MSVC/Srcs/common/: cmake_install.cmake  common.vcxproj  common.vcxproj.filters
MSVC/Srcs/jsonlib/: cmake_install.cmake  json.vcxproj  json.vcxproj.filters
MSVC/Srcs/parser/: cmake_install.cmake
MSVC/Srcs/reader/: cmake_install.cmake  heifreader.vcxproj  heifreader.vcxproj.filters
MSVC/Srcs/writer/: heifwriter.vcxproj  (+2 more)
MSVC/liuzianglib/: DC_Any.h  DC_File.h  DC_MD5.h  DC_SELECT.h  DC_STR.h  DC_ThreadPool.h  DC_TypeInfo.h  DC_User.h  DC_WinSock.h  DC_json.h  DC_jsonBuilder.h  DC_timer.h  DC_type.h
Srcs/: CMakeLists.txt
Srcs/HUD/: CMakeLists.txt  backup.cpp  exif.h  main.cpp
Srcs/HUD/liuzianglib/: DC_Exception.h  DC_File.h  DC_IOCP.h  DC_MySQL.h  DC_ReadWriteMutex.h  DC_STR.h  DC_Test.h  DC_UIBox.h  DC_User.h  DC_http.h  DC_http_server.h  DC_https_server.h  DC_json.h  DC_type.h  DC_var.h  README.md  liuzianglib.h
Srcs/buildinfo/: buildinfo.hpp.in
Srcs/common/: iteminfobox.cpp
Srcs/reader/: hevcimagefilereader.cpp  hevcimagefilereader.hpp
test/: 1.HEIC  11.HEIC  6.HEIC  7.HEIC  8.HEIC  9.HEIC  README!!!.txt  run.bat
(+6 files in other folders)
